<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" >
    <item 
        android:id="@+id/save" 
        android:title="@string/save" 
        android:icon="@drawable/ic_action_save"
        android:visible="true"
        app:showAsAction="always"/>
    <item 
        android:id="@+id/delete" 
        android:icon="@drawable/ic_action_remove" 
        android:title="@string/delete" 
        android:visible="false"
        app:showAsAction="always"/>
    <item 
        android:id="@+id/edit" 
        android:icon="@drawable/ic_action_edit" 
        android:title="@string/edit"
        android:visible="false" 
        app:showAsAction="always"/>
</menu>
